--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -4,13 +4,13 @@
         android:title="@string/pref_location_label"
         android:key="@string/pref_location_key"
         android:defaultValue="@string/pref_location_default"
-        android:inputType="text"
         android:singleLine="true" />
-    <EditTextPreference
+    <ListPreference
         android:title="@string/pref_units_label"
         android:key="@string/pref_units_key"
         android:defaultValue="@string/pref_units_default"
-        android:inputType="text"
-        android:singleLine="true" />
+        android:entries="@array/pref_units_entries"
+        android:entryValues="@array/pref_units_values"
+        />
 
 </PreferenceScreen>
