--- a/app/src/main/res/menu/forecastfragment.xml
+++ b/app/src/main/res/menu/forecastfragment.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_refresh"
+    <item
+        android:id="@+id/action_refresh"
         android:title="@string/action_refresh"
         android:orderInCategory="50"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_item_share"
+        android:title="@string/share"
+        android:actionProviderClass=
+            "android.widget.ShareActionProvider"
+        app:showAsAction="ifRoom"/>
 
 </menu>
